// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should render a default component 1`] = `
<div
  className="switch-wrapper"
>
  <label
    htmlFor="defaultSwitch"
  >
    <div
      className="switch-container"
    >
      <div
        className="label-container"
      >
        <span
          className="label-text"
          id="label1"
        >
          default
        </span>
        <span
          className="status-label-text"
        >
          Off
        </span>
      </div>
      <div
        className="switch"
      >
        <span
          className="tray unselected"
        >
          <button
            aria-checked={false}
            aria-labelledby="label1"
            className="slider"
            disabled={false}
            id="defaultSwitch"
            onClick={[Function]}
            role="switch"
            tabIndex="0"
            type="button"
          />
        </span>
      </div>
    </div>
  </label>
</div>
`;

exports[`Switch should render as disabled when set 1`] = `
<div
  className="switch-wrapper"
>
  <label
    htmlFor="disabledSwitch"
  >
    <div
      className="switch-container"
    >
      <div
        className="label-container"
      >
        <span
          className="label-text"
          id="label2"
        >
          Label
        </span>
        <span
          className="status-label-text"
        >
          Off
        </span>
      </div>
      <div
        className="switch"
      >
        <span
          className="tray unselected is-disabled"
        >
          <button
            aria-checked={false}
            aria-labelledby="label2"
            className="slider is-disabled"
            disabled={true}
            id="disabledSwitch"
            onClick={[Function]}
            role="switch"
            tabIndex="0"
            type="button"
          />
        </span>
      </div>
    </div>
  </label>
</div>
`;
